# ksnip-plugin-ocr

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/scripts/: setup_build_variables.sh
.github/scripts/linux/deb/: build_deb.sh  setup_changelog_file.sh  setup_deb_directory_structure.sh
.github/scripts/linux/deb/debian/: control  copyright  rules
.github/scripts/linux/rpm/: build_rpm.sh  ksnip-plugin-ocr.spec  setup_rpm_directory_structure.sh  setup_spec_file.sh
.github/workflows/: linux.yml  windows.yml
example/: CMakeLists.txt  IPluginOcrOther.h  main.cpp
src/: BuildConfig.h.in  CMakeLists.txt  IPluginOcr.h  OcrWrapper.cpp  OcrWrapper.h  PluginOcr.cpp  PluginOcr.h
